--- a/app/ISEAR_app/templates/predict.html
+++ b/app/ISEAR_app/templates/predict.html
@@ -6,7 +6,7 @@
 <p> <strong>Emotion Detection and Recognition - ISEAR DATA</strong></p>
 <div>
     <p>Model Name : <strong>{{data.model}}</strong></p><br>
-    <form action="/predict" method="POST">
+    <form action="/" method="POST">
         <label for="input_data" >Your Emotion</label><br>
         <textarea name="data" id="data" rows="4" cols="50">{%if data.text%}{{data.text}}{%endif%}</textarea><br>
         <input type="hidden" id="model" name="model" value="{{data.model}}" readonly ><br>
